--- a/numpy.org
+++ b/numpy.org
@@ -6,7 +6,7 @@
 
 * Built-in methods to create arrays
 ** ~array~
-#+begin_src python
+#+begin_src python :session
 np.array([[1,2,3],[4,5,6],[7,8,9]])
 # array([[1, 2, 3],
 #        [4, 5, 6],
@@ -14,13 +14,13 @@ np.array([[1,2,3],[4,5,6],[7,8,9]])
 #+end_src
 
 ** ~arange~
-#+begin_src python
+#+begin_src python :session
 np.arange(0, 11, 2)
 # array([ 0,  2,  4,  6,  8, 10])
 #+end_src
 
 ** ~zeros~, ~ones~
-#+begin_src python
+#+begin_src python :session
 np.zeros((5, 5))
 # array([[0., 0., 0., 0., 0.],
 #        [0., 0., 0., 0., 0.],
@@ -31,7 +31,7 @@ np.zeros((5, 5))
 
 ** ~linspace~
 Return ~n~ evenly spaced numbers over ~[a, b]~ (both inclusive).
-#+begin_src python
+#+begin_src python :session
 np.linspace(0, 5, 21)
 # array([0.  , 0.25, 0.5 , 0.75, 1.  , 1.25, 1.5 , 1.75, 2.  , 2.25, 2.5 ,
 #        2.75, 3.  , 3.25, 3.5 , 3.75, 4.  , 4.25, 4.5 , 4.75, 5.  ])
@@ -39,7 +39,7 @@ np.linspace(0, 5, 21)
 
 ** ~eye~
 Creates an identity matrix.
-#+begin_src python
+#+begin_src python :session
 np.eye(4)
 # array([[1., 0., 0., 0.],
 #        [0., 1., 0., 0.],
@@ -49,7 +49,7 @@ np.eye(4)
 
 * Random
 ** ~seed~
-#+begin_src python
+#+begin_src python :session
 np.random.seed(42)
 np.random.rand(4)
 # array([0.37454012, 0.95071431, 0.73199394, 0.59865848])
@@ -58,7 +58,7 @@ np.random.rand(4)
 ** ~rand~
 Creates an array of the given shape populated with random samples from a
 *uniform distribution* over [0, 1].
-#+begin_src python
+#+begin_src python :session
 np.random.rand(5,5)
 # array([[0.03932992, 0.80719137, 0.50145497, 0.68816102, 0.1216304 ],
 #        [0.44966851, 0.92572848, 0.70802042, 0.10461719, 0.53768331],
@@ -69,14 +69,14 @@ np.random.rand(5,5)
 
 ** ~randn~
 Uses the *standard distribution* (σ = 1) to populate the array.
-#+begin_src python
+#+begin_src python :session
 np.random.randn(2)
 # array([-0.36633217, -1.40298731])
 #+end_src
 
 ** ~randint~
 Returns random integers from ~low~ (inclusive) to ~high~ (exclusive).
-#+begin_src python
+#+begin_src python :session
 np.random.randint(0, 100)
 # 71
 np.random.randint(0, 10, 9)
@@ -86,7 +86,7 @@ np.random.randint(0, 10, 9)
 * Array attributes and methods
 ** ~reshape~
 (~rows~, ~columns~)
-#+begin_src python
+#+begin_src python :session
 np.arange(0, 25).reshape(5, 5)
 # array([[ 0,  1,  2,  3,  4],
 #        [ 5,  6,  7,  8,  9],
@@ -96,7 +96,7 @@ np.arange(0, 25).reshape(5, 5)
 #+end_src
 
 ** ~min~, ~max~, ~argmin~, ~argmax~
-#+begin_src python
+#+begin_src python :session
 arr = np.random.randint(0, 100, 10)
 arr
 # array([82, 86, 74, 74, 87, 99, 23,  2, 21, 52])
@@ -112,18 +112,18 @@ arr.argmin()
 
 ** ~shape~
 (~rows~, ~columns~)
-#+begin_src python
+#+begin_src python :session
 np.arange(0, 25).shape # Note that this array would better be displayed
 # vertically to match the shape. However, numpy displays it horizontaly.
 # (25,)
 #+end_src
 ** ~ndim~
-#+begin_src python
+#+begin_src python :session
 np.arange(0, 125).reshape(5, 5, 5).ndim
 # 3
 #+end_src
 ** ~dtype~
-#+begin_src python
+#+begin_src python :session
 arr = np.arange(0, 25, dtype='float16') # intx, uintx, floatx
 arr.dtype
 # dtype('float16')
@@ -131,14 +131,14 @@ arr.dtype
 
 ** ~size~
 Returns the length of the array.
-#+begin_src python
+#+begin_src python :session
 a = np.array([3, 1, 5, 2, 5, 1, 1, 5, 1, 4, 2, 1, 4, 5, 3, 4, 5, 2, 4, 2, 6, 6, 3, 6, 2, 3, 5, 6, 5])
 a.size
 # 20
 #+end_src
 ** ~itemsize~
 Number of bytes that the underlying data type requires to store one element.
-#+begin_src python
+#+begin_src python :session
 np.array([1, 2, 3], dtype=np.uint64).itemsize
 # 8
 #+end_src
@@ -146,7 +146,7 @@ np.array([1, 2, 3], dtype=np.uint64).itemsize
 ** Slicing 1-D
 Regular slicing methods used in lists apply. Slice will point to the original
 arrays memory, which is not the case in regular lists.
-#+begin_src python
+#+begin_src python :session
 l1 = list(range(0, 10))
 l2 = l1[:5] # [:] operator shallow copies elements to a new array
 l1[1] = 100
@@ -160,7 +160,7 @@ a2
 # array([  0, 100,   2,   3,   4])
 #+end_src
 ** ~copy~
-#+begin_src python
+#+begin_src python :session
 a1 = np.arange(0, 10)
 a2 = a1[:5].copy()
 a1[1] = 100
@@ -168,7 +168,7 @@ a2
 # array([0, 1, 2, 3, 4])
 #+end_src
 ** Broadcasting
-#+begin_src python
+#+begin_src python :session
 arr = np.arange(0, 10)
 arr[:5] = 100
 arr
@@ -177,7 +177,7 @@ arr
 ** Slicing 2-D
 Using ~:~ is important when slicing. It changes the shape of the output. Using
 ~:~ keeps the shape.
-#+begin_src python
+#+begin_src python :session
 a = np.arange(0, 100, 5).reshape(4, 5)
 a
 # array([[ 0,  5, 10, 15, 20],
@@ -203,7 +203,7 @@ a[1:, 3]
 
 * Conditional selection
 Includes a pointer to the original array.
-#+begin_src python
+#+begin_src python :session
 a = np.random.randint(0, 10, 20)
 a
 # array([7, 2, 0, 3, 2, 9, 6, 0, 9, 6, 5, 6, 0, 5, 3, 6, 1, 1, 0, 2])
@@ -219,7 +219,7 @@ a[gt5] *= 10
 * Operations
 ** ~+~, ~-~, ~/~, ~*~
 Division by zero will not cause an error. Instead it will issue a warning.
-#+begin_src python
+#+begin_src python :session
 a = np.array([5, 7, 1, 0])
 a / 2
 # array([2.5, 3.5, 0.5, 0. ])
@@ -245,7 +245,7 @@ more information.
 | ~float_~, ~float16~, ~float32~, ~float64~                       | Float types            |
 | ~complex_~, ~complex64~, ~complex128~                           | Complex types          |
 ** Constructing with data type
-#+begin_src python
+#+begin_src python :session
 np.array([1, 2, 3, 4, 5], dtype=np.float16)
 # array([1., 2., 3., 4., 5.], dtype=float16)
 #+end_src
@@ -256,7 +256,7 @@ datatypes organized as a sequence of named fields. They closely mimic C ~struct~
 1. A list of tuples can be used to express the layout.
    ~np.dtype([(fieldname, datatype, shape), ...])~ where ~shape~ is optional.
 2. A string of comma-seperated dtype specifications.
-#+begin_src python
+#+begin_src python :session
 np.dtype('i8, f4, S3, ...')
 # dtype([('f0', '<i8'), ('f1', '<f4'), ('f2', 'S3'), ...])
 #+end_src
@@ -265,7 +265,7 @@ np.dtype('i8, f4, S3, ...')
    * ~offsets~ specifies the offset of each column from the start.
    * ~itemsize~ specifies the total size of the structure. It must be able to
      contain the structure.
-#+begin_src python
+#+begin_src python :session
 np.dtype({'names': ['col1', 'col2'], 'formats': ['i4', 'f4']})
 # dtype([('col1', '<i4'), ('col2', '<f4')])
 np.dtype({'names':   ['col1', 'col2'],
@@ -275,12 +275,12 @@ np.dtype({'names':   ['col1', 'col2'],
 # dtype({'names': ['col1', 'col2'], 'formats': ['<i4', '<f4'], 'offsets': [0, 4], 'itemsize': 12})
 #+end_src
 4. A dictionary of field names.
-#+begin_src python
+#+begin_src python :session
 np.dtype({'col1': ('i1', 0), 'col2': ('f4', 1)})
 # dtype([('col1', 'i1'), ('col2', '<f4')])
 #+end_src
 
-#+begin_src python
+#+begin_src python :session
 population = np.dtype([('country', 'U20'), ('density', '=i4'), ('area', '=i4'), ('population', '=i4')])
 table = np.array([
     ('Netherlands', 393, 41526, 16928800),
