--- a/numpy.org
+++ b/numpy.org
@@ -7,93 +7,121 @@
 * Built-in methods to create arrays
 ** ~array~
 #+begin_src python :session
+import numpy as np
 np.array([[1,2,3],[4,5,6],[7,8,9]])
-# array([[1, 2, 3],
-#        [4, 5, 6],
-#        [7, 8, 9]])
 #+end_src
+
+#+RESULTS:
+| 1 | 2 | 3 |
+| 4 | 5 | 6 |
+| 7 | 8 | 9 |
 
 ** ~arange~
 #+begin_src python :session
+import numpy as np
 np.arange(0, 11, 2)
-# array([ 0,  2,  4,  6,  8, 10])
 #+end_src
+
+#+RESULTS:
+| 0 | 2 | 4 | 6 | 8 | 10 |
 
 ** ~zeros~, ~ones~
 #+begin_src python :session
+import numpy as np
 np.zeros((5, 5))
-# array([[0., 0., 0., 0., 0.],
-#        [0., 0., 0., 0., 0.],
-#        [0., 0., 0., 0., 0.],
-#        [0., 0., 0., 0., 0.],
-#        [0., 0., 0., 0., 0.]])
 #+end_src
+
+#+RESULTS:
+| 0 | 0 | 0 | 0 | 0 |
+| 0 | 0 | 0 | 0 | 0 |
+| 0 | 0 | 0 | 0 | 0 |
+| 0 | 0 | 0 | 0 | 0 |
+| 0 | 0 | 0 | 0 | 0 |
 
 ** ~linspace~
 Return ~n~ evenly spaced numbers over ~[a, b]~ (both inclusive).
 #+begin_src python :session
-np.linspace(0, 5, 21)
-# array([0.  , 0.25, 0.5 , 0.75, 1.  , 1.25, 1.5 , 1.75, 2.  , 2.25, 2.5 ,
-#        2.75, 3.  , 3.25, 3.5 , 3.75, 4.  , 4.25, 4.5 , 4.75, 5.  ])
+import numpy as np
+np.linspace(0, 5, 11)
 #+end_src
+
+#+RESULTS:
+| 0 | 0.5 | 1 | 1.5 | 2 | 2.5 | 3 | 3.5 | 4 | 4.5 | 5 |
 
 ** ~eye~
 Creates an identity matrix.
 #+begin_src python :session
+import numpy as np
 np.eye(4)
-# array([[1., 0., 0., 0.],
-#        [0., 1., 0., 0.],
-#        [0., 0., 1., 0.],
-#        [0., 0., 0., 1.]])
 #+end_src
+
+#+RESULTS:
+| 1 | 0 | 0 | 0 |
+| 0 | 1 | 0 | 0 |
+| 0 | 0 | 1 | 0 |
+| 0 | 0 | 0 | 1 |
 
 * Random
 ** ~seed~
 #+begin_src python :session
+import numpy as np
 np.random.seed(42)
 np.random.rand(4)
-# array([0.37454012, 0.95071431, 0.73199394, 0.59865848])
 #+end_src
+
+#+RESULTS:
+| 0.37454012 | 0.95071431 | 0.73199394 | 0.59865848 |
 
 ** ~rand~
 Creates an array of the given shape populated with random samples from a
 *uniform distribution* over [0, 1].
 #+begin_src python :session
+import numpy as np
 np.random.rand(5,5)
-# array([[0.03932992, 0.80719137, 0.50145497, 0.68816102, 0.1216304 ],
-#        [0.44966851, 0.92572848, 0.70802042, 0.10461719, 0.53768331],
-#        [0.12201904, 0.5940684 , 0.89979774, 0.3424078 , 0.77421593],
-#        [0.53191409, 0.0112285 , 0.3989947 , 0.8946967 , 0.2497392 ],
-#        [0.5814085 , 0.37563686, 0.15266028, 0.42948309, 0.26434141]])
 #+end_src
+
+#+RESULTS:
+| 0.15601864 | 0.15599452 | 0.05808361 | 0.86617615 | 0.60111501 |
+| 0.70807258 | 0.02058449 | 0.96990985 | 0.83244264 | 0.21233911 |
+| 0.18182497 | 0.18340451 | 0.30424224 | 0.52475643 | 0.43194502 |
+| 0.29122914 | 0.61185289 | 0.13949386 | 0.29214465 | 0.36636184 |
+| 0.45606998 | 0.78517596 | 0.19967378 | 0.51423444 | 0.59241457 |
 
 ** ~randn~
 Uses the *standard distribution* (σ = 1) to populate the array.
 #+begin_src python :session
+import numpy as np
 np.random.randn(2)
-# array([-0.36633217, -1.40298731])
 #+end_src
+
+#+RESULTS:
+| 0.12221917 | -0.51543566 |
 
 ** ~randint~
 Returns random integers from ~low~ (inclusive) to ~high~ (exclusive).
 #+begin_src python :session
+import numpy as np
 np.random.randint(0, 100)
-# 71
 np.random.randint(0, 10, 9)
-# array([7, 7, 0, 4, 4, 5, 9, 1, 8])
 #+end_src
+
+#+RESULTS:
+| 3 | 7 | 6 | 8 | 7 | 4 | 1 | 4 | 7 |
 
 * Array attributes and methods
 ** ~reshape~
 (~rows~, ~columns~)
 #+begin_src python :session
+import numpy as np
 np.arange(0, 25).reshape(5, 5)
-# array([[ 0,  1,  2,  3,  4],
-#        [ 5,  6,  7,  8,  9],
-#        [10, 11, 12, 13, 14],
-#        [15, 16, 17, 18, 19],
-#        [20, 21, 22, 23, 24]])
 #+end_src
+
+#+RESULTS:
+|  0 |  1 |  2 |  3 |  4 |
+|  5 |  6 |  7 |  8 |  9 |
+| 10 | 11 | 12 | 13 | 14 |
+| 15 | 16 | 17 | 18 | 19 |
+| 20 | 21 | 22 | 23 | 24 |
 
 ** ~min~, ~max~, ~argmin~, ~argmax~
 #+begin_src python :session
@@ -117,6 +145,7 @@ np.arange(0, 25).shape # Note that this array would better be displayed
 # vertically to match the shape. However, numpy displays it horizontaly.
 # (25,)
 #+end_src
+
 ** ~ndim~
 #+begin_src python :session
 np.arange(0, 125).reshape(5, 5, 5).ndim
@@ -124,6 +153,7 @@ np.arange(0, 125).reshape(5, 5, 5).ndim
 #+end_src
 ** ~dtype~
 #+begin_src python :session
+import numpy as np
 arr = np.arange(0, 25, dtype='float16') # intx, uintx, floatx
 arr.dtype
 # dtype('float16')
@@ -147,33 +177,49 @@ np.array([1, 2, 3], dtype=np.uint64).itemsize
 Regular slicing methods used in lists apply. Slice will point to the original
 arrays memory, which is not the case in regular lists.
 #+begin_src python :session
+import numpy as np
 l1 = list(range(0, 10))
 l2 = l1[:5] # [:] operator shallow copies elements to a new array
 l1[1] = 100
 l2
-# [0, 1, 2, 3, 4]
+#+end_src
 
+#+RESULTS:
+| 0 | 1 | 2 | 3 | 4 |
+
+#+begin_src python :session
 a1 = np.arange(0, 10)
 a2 = a1[:5]
 a1[1] = 100
 a2
-# array([  0, 100,   2,   3,   4])
 #+end_src
+
+#+RESULTS:
+| 0 | 100 | 2 | 3 | 4 |
+
 ** ~copy~
 #+begin_src python :session
+import numpy as np
 a1 = np.arange(0, 10)
 a2 = a1[:5].copy()
 a1[1] = 100
 a2
-# array([0, 1, 2, 3, 4])
 #+end_src
+
+#+RESULTS:
+| 0 | 1 | 2 | 3 | 4 |
+
 ** Broadcasting
 #+begin_src python :session
+import numpy as np
 arr = np.arange(0, 10)
 arr[:5] = 100
 arr
-# array([100, 100, 100, 100, 100,   5,   6,   7,   8,   9])
 #+end_src
+
+#+RESULTS:
+| 100 | 100 | 100 | 100 | 100 | 5 | 6 | 7 | 8 | 9 |
+
 ** Slicing 2-D
 Using ~:~ is important when slicing. It changes the shape of the output. Using
 ~:~ keeps the shape.
@@ -281,11 +327,12 @@ np.dtype({'col1': ('i1', 0), 'col2': ('f4', 1)})
 #+end_src
 
 #+begin_src python :session
+import numpy as np
 population = np.dtype([('country', 'U20'), ('density', '=i4'), ('area', '=i4'), ('population', '=i4')])
-table = np.array([
+np.array([
     ('Netherlands', 393, 41526, 16928800),
     ('Belgium', 337, 30510, 11007020),
-    ('United Kingdom', 256, 243610, 62262000),
+    ('United Kingdom', 256, 243610, 62262000),
     ('Germany', 233, 357021, 81799600),
     ('Liechtenstein', 205, 160, 32842),
     ('Italy', 192, 301230, 59715625),
@@ -300,6 +347,24 @@ table = np.array([
     ('Norway', 13, 385252, 5033675),
 ], dtype=population)
 #+end_src
+
+#+RESULTS:
+| Netherlands    | 393 |  41526 | 16928800 |
+| Belgium        | 337 |  30510 | 11007020 |
+| United Kingdom | 256 | 243610 | 62262000 |
+| Germany        | 233 | 357021 | 81799600 |
+| Liechtenstein  | 205 |    160 |    32842 |
+| Italy          | 192 | 301230 | 59715625 |
+| Switzerland    | 177 |  41290 |  7301994 |
+| Luxembourg     | 173 |   2586 |   512000 |
+| France         | 111 | 547030 | 63601002 |
+| Austria        |  97 |  83858 |  8169929 |
+| Greece         |  81 | 131940 | 11606813 |
+| Ireland        |  65 |  70280 |  4581269 |
+| Sweden         |  20 | 449964 |  9515744 |
+| Finland        |  16 | 338424 |  5410233 |
+| Norway         |  13 | 385252 |  5033675 |
+
 ** Endiannes
 - ~'<i8'~ use little-endian. x86 architecture and some Arm chips use this
   format.
