--- a/numpy.org
+++ b/numpy.org
@@ -6,7 +6,7 @@
 
 * Built-in methods to create arrays
 ** ~array~
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.array([[1,2,3],[4,5,6],[7,8,9]])
 #+end_src
@@ -17,7 +17,7 @@ np.array([[1,2,3],[4,5,6],[7,8,9]])
 | 7 | 8 | 9 |
 
 ** ~arange~
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.arange(0, 11, 2)
 #+end_src
@@ -26,7 +26,7 @@ np.arange(0, 11, 2)
 | 0 | 2 | 4 | 6 | 8 | 10 |
 
 ** ~zeros~, ~ones~
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.zeros((5, 5))
 #+end_src
@@ -40,7 +40,7 @@ np.zeros((5, 5))
 
 ** ~linspace~
 Return ~n~ evenly spaced numbers over ~[a, b]~ (both inclusive).
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.linspace(0, 5, 11)
 #+end_src
@@ -50,7 +50,7 @@ np.linspace(0, 5, 11)
 
 ** ~eye~
 Creates an identity matrix.
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.eye(4)
 #+end_src
@@ -63,7 +63,7 @@ np.eye(4)
 
 * Random
 ** ~seed~
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.random.seed(42)
 np.random.rand(4)
@@ -75,7 +75,7 @@ np.random.rand(4)
 ** ~rand~
 Creates an array of the given shape populated with random samples from a
 *uniform distribution* over [0, 1].
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.random.rand(5,5)
 #+end_src
@@ -89,7 +89,7 @@ np.random.rand(5,5)
 
 ** ~randn~
 Uses the *standard distribution* (σ = 1) to populate the array.
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.random.randn(2)
 #+end_src
@@ -99,7 +99,7 @@ np.random.randn(2)
 
 ** ~randint~
 Returns random integers from ~low~ (inclusive) to ~high~ (exclusive).
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.random.randint(0, 100)
 np.random.randint(0, 10, 9)
@@ -111,7 +111,7 @@ np.random.randint(0, 10, 9)
 * Array attributes and methods
 ** ~reshape~
 (~rows~, ~columns~)
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 np.arange(0, 25).reshape(5, 5)
 #+end_src
@@ -124,7 +124,7 @@ np.arange(0, 25).reshape(5, 5)
 | 20 | 21 | 22 | 23 | 24 |
 
 ** ~min~, ~max~, ~argmin~, ~argmax~
-#+begin_src python :session
+#+begin_src python  :session :export both
 arr = np.random.randint(0, 100, 10)
 arr
 # array([82, 86, 74, 74, 87, 99, 23,  2, 21, 52])
@@ -140,19 +140,19 @@ arr.argmin()
 
 ** ~shape~
 (~rows~, ~columns~)
-#+begin_src python :session
+#+begin_src python  :session :export both
 np.arange(0, 25).shape # Note that this array would better be displayed
 # vertically to match the shape. However, numpy displays it horizontaly.
 # (25,)
 #+end_src
 
 ** ~ndim~
-#+begin_src python :session
+#+begin_src python  :session :export both
 np.arange(0, 125).reshape(5, 5, 5).ndim
 # 3
 #+end_src
 ** ~dtype~
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 arr = np.arange(0, 25, dtype='float16') # intx, uintx, floatx
 arr.dtype
@@ -161,14 +161,14 @@ arr.dtype
 
 ** ~size~
 Returns the length of the array.
-#+begin_src python :session
+#+begin_src python  :session :export both
 a = np.array([3, 1, 5, 2, 5, 1, 1, 5, 1, 4, 2, 1, 4, 5, 3, 4, 5, 2, 4, 2, 6, 6, 3, 6, 2, 3, 5, 6, 5])
 a.size
 # 20
 #+end_src
 ** ~itemsize~
 Number of bytes that the underlying data type requires to store one element.
-#+begin_src python :session
+#+begin_src python  :session :export both
 np.array([1, 2, 3], dtype=np.uint64).itemsize
 # 8
 #+end_src
@@ -176,7 +176,7 @@ np.array([1, 2, 3], dtype=np.uint64).itemsize
 ** Slicing 1-D
 Regular slicing methods used in lists apply. Slice will point to the original
 arrays memory, which is not the case in regular lists.
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 l1 = list(range(0, 10))
 l2 = l1[:5] # [:] operator shallow copies elements to a new array
@@ -187,7 +187,7 @@ l2
 #+RESULTS:
 | 0 | 1 | 2 | 3 | 4 |
 
-#+begin_src python :session
+#+begin_src python  :session :export both
 a1 = np.arange(0, 10)
 a2 = a1[:5]
 a1[1] = 100
@@ -198,7 +198,7 @@ a2
 | 0 | 100 | 2 | 3 | 4 |
 
 ** ~copy~
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 a1 = np.arange(0, 10)
 a2 = a1[:5].copy()
@@ -210,7 +210,7 @@ a2
 | 0 | 1 | 2 | 3 | 4 |
 
 ** Broadcasting
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 arr = np.arange(0, 10)
 arr[:5] = 100
@@ -223,7 +223,7 @@ arr
 ** Slicing 2-D
 Using ~:~ is important when slicing. It changes the shape of the output. Using
 ~:~ keeps the shape.
-#+begin_src python :session
+#+begin_src python  :session :export both
 a = np.arange(0, 100, 5).reshape(4, 5)
 a
 # array([[ 0,  5, 10, 15, 20],
@@ -249,7 +249,7 @@ a[1:, 3]
 
 * Conditional selection
 Includes a pointer to the original array.
-#+begin_src python :session
+#+begin_src python  :session :export both
 a = np.random.randint(0, 10, 20)
 a
 # array([7, 2, 0, 3, 2, 9, 6, 0, 9, 6, 5, 6, 0, 5, 3, 6, 1, 1, 0, 2])
@@ -265,7 +265,7 @@ a[gt5] *= 10
 * Operations
 ** ~+~, ~-~, ~/~, ~*~
 Division by zero will not cause an error. Instead it will issue a warning.
-#+begin_src python :session
+#+begin_src python  :session :export both
 a = np.array([5, 7, 1, 0])
 a / 2
 # array([2.5, 3.5, 0.5, 0. ])
@@ -291,7 +291,7 @@ more information.
 | ~float_~, ~float16~, ~float32~, ~float64~                       | Float types            |
 | ~complex_~, ~complex64~, ~complex128~                           | Complex types          |
 ** Constructing with data type
-#+begin_src python :session
+#+begin_src python  :session :export both
 np.array([1, 2, 3, 4, 5], dtype=np.float16)
 # array([1., 2., 3., 4., 5.], dtype=float16)
 #+end_src
@@ -302,7 +302,7 @@ datatypes organized as a sequence of named fields. They closely mimic C ~struct~
 1. A list of tuples can be used to express the layout.
    ~np.dtype([(fieldname, datatype, shape), ...])~ where ~shape~ is optional.
 2. A string of comma-seperated dtype specifications.
-#+begin_src python :session
+#+begin_src python  :session :export both
 np.dtype('i8, f4, S3, ...')
 # dtype([('f0', '<i8'), ('f1', '<f4'), ('f2', 'S3'), ...])
 #+end_src
@@ -311,7 +311,7 @@ np.dtype('i8, f4, S3, ...')
    * ~offsets~ specifies the offset of each column from the start.
    * ~itemsize~ specifies the total size of the structure. It must be able to
      contain the structure.
-#+begin_src python :session
+#+begin_src python  :session :export both
 np.dtype({'names': ['col1', 'col2'], 'formats': ['i4', 'f4']})
 # dtype([('col1', '<i4'), ('col2', '<f4')])
 np.dtype({'names':   ['col1', 'col2'],
@@ -321,12 +321,12 @@ np.dtype({'names':   ['col1', 'col2'],
 # dtype({'names': ['col1', 'col2'], 'formats': ['<i4', '<f4'], 'offsets': [0, 4], 'itemsize': 12})
 #+end_src
 4. A dictionary of field names.
-#+begin_src python :session
+#+begin_src python  :session :export both
 np.dtype({'col1': ('i1', 0), 'col2': ('f4', 1)})
 # dtype([('col1', 'i1'), ('col2', '<f4')])
 #+end_src
 
-#+begin_src python :session
+#+begin_src python  :session :export both
 import numpy as np
 population = np.dtype([('country', 'U20'), ('density', '=i4'), ('area', '=i4'), ('population', '=i4')])
 np.array([
