--- a/numpy.org
+++ b/numpy.org
@@ -6,7 +6,7 @@
 
 * Built-in methods to create arrays
 ** ~array~
-#+begin_src python  :session :exportss both
+#+begin_src python  :session :exports both
 import numpy as np
 np.array([[1,2,3],[4,5,6],[7,8,9]])
 #+end_src
