--- a/numpy.org
+++ b/numpy.org
@@ -5,7 +5,7 @@
 #+title: Numpy
 
 * Loading Numpy
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports none
 import numpy as np
 #+end_src
 
@@ -13,166 +13,166 @@ import numpy as np
 
 * Built-in methods to create arrays
 ** ~array~
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.array([[1,2,3],[4,5,6],[7,8,9]])
 #+end_src
 
 #+RESULTS:
-: array([[1, 2, 3],
-:        [4, 5, 6],
-:        [7, 8, 9]])
+| 1 | 2 | 3 |
+| 4 | 5 | 6 |
+| 7 | 8 | 9 |
 
 ** ~arange~
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.arange(0, 11, 2)
 #+end_src
 
 #+RESULTS:
-: array([ 0,  2,  4,  6,  8, 10])
+| 0 | 2 | 4 | 6 | 8 | 10 |
 
 ** ~zeros~, ~ones~
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.zeros((5, 5))
 #+end_src
 
 #+RESULTS:
-: array([[0., 0., 0., 0., 0.],
-:        [0., 0., 0., 0., 0.],
-:        [0., 0., 0., 0., 0.],
-:        [0., 0., 0., 0., 0.],
-:        [0., 0., 0., 0., 0.]])
+| 0 | 0 | 0 | 0 | 0 |
+| 0 | 0 | 0 | 0 | 0 |
+| 0 | 0 | 0 | 0 | 0 |
+| 0 | 0 | 0 | 0 | 0 |
+| 0 | 0 | 0 | 0 | 0 |
 
 ** ~linspace~
 Return ~n~ evenly spaced numbers over ~[a, b]~ (both inclusive).
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.linspace(0, 5, 11)
 #+end_src
 
 #+RESULTS:
-: array([0. , 0.5, 1. , 1.5, 2. , 2.5, 3. , 3.5, 4. , 4.5, 5. ])
+| 0 | 0.5 | 1 | 1.5 | 2 | 2.5 | 3 | 3.5 | 4 | 4.5 | 5 |
 
 ** ~eye~
 Creates an identity matrix.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.eye(4)
 #+end_src
 
 #+RESULTS:
-: array([[1., 0., 0., 0.],
-:        [0., 1., 0., 0.],
-:        [0., 0., 1., 0.],
-:        [0., 0., 0., 1.]])
+| 1 | 0 | 0 | 0 |
+| 0 | 1 | 0 | 0 |
+| 0 | 0 | 1 | 0 |
+| 0 | 0 | 0 | 1 |
 
 * Random
 ** ~seed~
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.random.seed(42)
 np.random.rand(4)
 #+end_src
 
 #+RESULTS:
-: array([0.37454012, 0.95071431, 0.73199394, 0.59865848])
+| 0.37454012 | 0.95071431 | 0.73199394 | 0.59865848 |
 
 ** ~rand~
 Creates an array of the given shape populated with random samples from a
 *uniform distribution* over [0, 1].
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.random.rand(5,5)
 #+end_src
 
 #+RESULTS:
-: array([[0.15601864, 0.15599452, 0.05808361, 0.86617615, 0.60111501],
-:        [0.70807258, 0.02058449, 0.96990985, 0.83244264, 0.21233911],
-:        [0.18182497, 0.18340451, 0.30424224, 0.52475643, 0.43194502],
-:        [0.29122914, 0.61185289, 0.13949386, 0.29214465, 0.36636184],
-:        [0.45606998, 0.78517596, 0.19967378, 0.51423444, 0.59241457]])
+| 0.15601864 | 0.15599452 | 0.05808361 | 0.86617615 | 0.60111501 |
+| 0.70807258 | 0.02058449 | 0.96990985 | 0.83244264 | 0.21233911 |
+| 0.18182497 | 0.18340451 | 0.30424224 | 0.52475643 | 0.43194502 |
+| 0.29122914 | 0.61185289 | 0.13949386 | 0.29214465 | 0.36636184 |
+| 0.45606998 | 0.78517596 | 0.19967378 | 0.51423444 | 0.59241457 |
 
 ** ~randn~
 Uses the *standard distribution* (σ = 1) to populate the array.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.random.randn(2)
 #+end_src
 
 #+RESULTS:
-: array([ 0.12221917, -0.51543566])
+| 0.291034 | -0.63555974 |
 
 ** ~randint~
 Returns random integers from ~low~ (inclusive) to ~high~ (exclusive).
-#+begin_src jupyter-python :session py3 :exports both :results both
+#+begin_src python :session np :exports both :results both
 np.random.randint(0, 100)
 #+end_src
 
 #+RESULTS:
-: 73
+: 59
 
-#+begin_src jupyter-python :session py3 :exports both :results both
+#+begin_src python :session np :exports both :results both
 np.random.randint(0, 10, 9)
 #+end_src
 
 #+RESULTS:
-: array([3, 7, 6, 8, 7, 4, 1, 4, 7])
+| 6 | 7 | 2 | 0 | 3 | 1 | 7 | 3 | 1 |
 
 * Array attributes and methods
 ** ~reshape~
 (~rows~, ~columns~)
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.arange(0, 25).reshape(5, 5)
 #+end_src
 
 #+RESULTS:
-: array([[ 0,  1,  2,  3,  4],
-:        [ 5,  6,  7,  8,  9],
-:        [10, 11, 12, 13, 14],
-:        [15, 16, 17, 18, 19],
-:        [20, 21, 22, 23, 24]])
+|  0 |  1 |  2 |  3 |  4 |
+|  5 |  6 |  7 |  8 |  9 |
+| 10 | 11 | 12 | 13 | 14 |
+| 15 | 16 | 17 | 18 | 19 |
+| 20 | 21 | 22 | 23 | 24 |
 
 ** ~min~, ~max~, ~argmin~, ~argmax~
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 arr = np.random.randint(0, 100, 10)
 arr
 #+end_src
 
 #+RESULTS:
-: array([25, 88, 59, 40, 28, 14, 44, 64, 88, 70])
+| 5 | 53 | 3 | 53 | 92 | 62 | 17 | 89 | 43 | 33 |
 
 Get maximum value.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 arr.max()
 #+end_src
 
 #+RESULTS:
-: 88
+: 92
 
 Get minimum value.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 arr.min()
 #+end_src
 
 #+RESULTS:
-: 14
+: 3
 
 Get index of the maximum value.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 arr.argmax()
 #+end_src
 
 #+RESULTS:
-: 1
+: 4
 
 Get index of the minimum value.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 arr.argmin()
 #+end_src
 
 #+RESULTS:
-: 5
+: 2
 
 ** ~shape~
 ~(rows, columns, ...)~
 Each element in a numpy array is a row. However, when
 displayed, it is represented horizontally. It is better to think of it as
 vertical.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.arange(0, 25).shape
 #+end_src
 
@@ -180,7 +180,7 @@ np.arange(0, 25).shape
 | 25 |
 
 ** ~ndim~
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.arange(0, 125).reshape(5, 5, 5).ndim
 #+end_src
 
@@ -188,17 +188,17 @@ np.arange(0, 125).reshape(5, 5, 5).ndim
 : 3
 
 ** ~dtype~
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 arr = np.arange(0, 25, dtype='float16') # intx, uintx, floatx
 arr.dtype
 #+end_src
 
 #+RESULTS:
-: dtype('float16')
+: float16
 
 ** ~size~
 Returns the length of the array.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a = np.array([3, 1, 5, 2, 5, 1, 1, 5, 1, 4, 2, 1, 4, 5])
 a.size
 #+end_src
@@ -208,7 +208,7 @@ a.size
 
 ** ~itemsize~
 Number of bytes that the underlying data type requires to store one element.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 np.array([1, 2, 3], dtype=np.uint64).itemsize
 #+end_src
 
@@ -219,7 +219,7 @@ np.array([1, 2, 3], dtype=np.uint64).itemsize
 ** Slicing 1-D
 Regular slicing methods used in lists apply. Slice will point to the original
 arrays memory, which is not the case in regular lists.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 l1 = list(range(0, 10))
 l2 = l1[:5] # [:] operator shallow copies elements to a new array
 l1[1] = 100
@@ -229,7 +229,7 @@ l2
 #+RESULTS:
 | 0 | 1 | 2 | 3 | 4 |
 
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a1 = np.arange(0, 10)
 a2 = a1[:5]
 a1[1] = 100
@@ -237,10 +237,10 @@ a2
 #+end_src
 
 #+RESULTS:
-: array([  0, 100,   2,   3,   4])
+| 0 | 100 | 2 | 3 | 4 |
 
 ** ~copy~
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a1 = np.arange(0, 10)
 a2 = a1[:5].copy()
 a1[1] = 100
@@ -248,125 +248,114 @@ a2
 #+end_src
 
 #+RESULTS:
-: array([0, 1, 2, 3, 4])
+| 0 | 1 | 2 | 3 | 4 |
 
 ** Broadcasting
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 arr = np.arange(0, 10)
 arr[:5] = 100
 arr
 #+end_src
 
 #+RESULTS:
-: array([100, 100, 100, 100, 100,   5,   6,   7,   8,   9])
+| 100 | 100 | 100 | 100 | 100 | 5 | 6 | 7 | 8 | 9 |
 
 ** Slicing 2-D
 Using ~:~ is important when slicing. It changes the shape of the output. Using
 ~:~ keeps the shape.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a = np.arange(0, 100, 5).reshape(4, 5)
 a
 #+end_src
 
 #+RESULTS:
-: array([[ 0,  5, 10, 15, 20],
-:        [25, 30, 35, 40, 45],
-:        [50, 55, 60, 65, 70],
-:        [75, 80, 85, 90, 95]])
+|  0 |  5 | 10 | 15 | 20 |
+| 25 | 30 | 35 | 40 | 45 |
+| 50 | 55 | 60 | 65 | 70 |
+| 75 | 80 | 85 | 90 | 95 |
 
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a[1:3]
 #+end_src
 
 #+RESULTS:
-: array([[25, 30, 35, 40, 45],
-:        [50, 55, 60, 65, 70]])
+| 25 | 30 | 35 | 40 | 45 |
+| 50 | 55 | 60 | 65 | 70 |
 
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a[1:3,2:]
 #+end_src
 
 #+RESULTS:
-: array([[35, 40, 45],
-:        [60, 65, 70]])
+| 35 | 40 | 45 |
+| 60 | 65 | 70 |
 
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a[1:, 3:4] # != a[1:, 3]
 #+end_src
 
 #+RESULTS:
-: array([[40],
-:        [65],
-:        [90]])
+| 40 |
+| 65 |
+| 90 |
 
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a[1:, 3]
 #+end_src
 
 #+RESULTS:
-: array([40, 65, 90])
+| 40 | 65 | 90 |
 
 * Conditional selection
 Includes a pointer to the original array.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a = np.random.randint(0, 10, 20)
 a
 #+end_src
 
 #+RESULTS:
-: array([8, 7, 0, 7, 7, 2, 0, 7, 2, 2, 0, 4, 9, 6, 9, 8, 6, 8, 7, 1])
+| 9 | 3 | 7 | 6 | 8 | 7 | 4 | 1 | 4 | 7 | 9 | 8 | 8 | 0 | 8 | 6 | 8 | 7 | 0 | 7 |
 
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 gt5 = a > 5
 a[gt5]
 #+end_src
 
 #+RESULTS:
-: array([8, 7, 7, 7, 7, 9, 6, 9, 8, 6, 8, 7])
+| 9 | 7 | 6 | 8 | 7 | 7 | 9 | 8 | 8 | 8 | 6 | 8 | 7 | 7 |
 
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a[gt5] *= 10
 a
 #+end_src
 
 #+RESULTS:
-: array([800, 700,   0, 700, 700,   2,   0, 700,   2,   2,   0,   4, 900,
-:        600, 900, 800, 600, 800, 700,   1])
+| 90 | 3 | 70 | 60 | 80 | 70 | 4 | 1 | 4 | 70 | 90 | 80 | 80 | 0 | 80 | 60 | 80 | 70 | 0 | 70 |
 
 * Operations
 ** ~+~, ~-~, ~/~, ~*~
 Division by zero will not cause an error. Instead it will issue a warning.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a = np.array([5, 7, 1, 0])
 a / 2
 #+end_src
 
 #+RESULTS:
-: array([2.5, 3.5, 0.5, 0. ])
+| 2.5 | 3.5 | 0.5 | 0 |
 
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a / a
 #+end_src
 
 #+RESULTS:
-:RESULTS:
-: /tmp/ipykernel_21438/3063000341.py:1: RuntimeWarning: invalid value encountered in divide
-:   a / a
-: array([ 1.,  1.,  1., nan])
-:END:
+| 1 | 1 | 1 | nan |
 
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both
 a / 0
 #+end_src
 
 #+RESULTS:
-:RESULTS:
-: /tmp/ipykernel_21438/1979898162.py:1: RuntimeWarning: divide by zero encountered in divide
-:   a / 0
-: /tmp/ipykernel_21438/1979898162.py:1: RuntimeWarning: invalid value encountered in divide
-:   a / 0
-: array([inf, inf, inf, nan])
-:END:
+| inf | inf | inf | nan |
 
 * Data types
 ** Numpy data types
@@ -380,7 +369,7 @@ more information.
 | ~float_~, ~float16~, ~float32~, ~float64~                       | Float types            |
 | ~complex_~, ~complex64~, ~complex128~                           | Complex types          |
 ** Constructing with data type
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both :results pp
 np.array([1, 2, 3, 4, 5], dtype=np.float16)
 #+end_src
 
@@ -394,7 +383,7 @@ datatypes organized as a sequence of named fields. They closely mimic C ~struct~
 1. A list of tuples can be used to express the layout.
    ~np.dtype([(fieldname, datatype, shape), ...])~ where ~shape~ is optional.
 2. A string of comma-seperated dtype specifications.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both :results pp
 np.dtype('i8, f4, S3')
 #+end_src
 
@@ -406,7 +395,7 @@ np.dtype('i8, f4, S3')
    * ~offsets~ specifies the offset of each column from the start.
    * ~itemsize~ specifies the total size of the structure. It must be able to
      contain the structure.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both :results pp
 # np.dtype({'names': ['col1', 'col2'], 'formats': ['i4', 'f4']})
 np.dtype({'names':   ['col1', 'col2'],
           'formats': ['i4',   'f4'],
@@ -418,32 +407,35 @@ np.dtype({'names':   ['col1', 'col2'],
 : dtype({'names': ['col1', 'col2'], 'formats': ['<i4', '<f4'], 'offsets': [0, 4], 'itemsize': 12})
 
 4. A dictionary of field names.
-#+begin_src jupyter-python :session py3 :exports both
+#+begin_src python :session np :exports both :results pp
 np.dtype({'col1': ('i1', 0), 'col2': ('f4', 1)})
 #+end_src
 
 #+RESULTS:
 : dtype([('col1', 'i1'), ('col2', '<f4')])
 
-#+begin_src jupyter-python :session py3 :exports both
-population = np.dtype([('country', 'U20'), ('density', '=i4'), ('area', '=i4'), ('population', '=i4')])
-np.array([
-    ('Netherlands', 393, 41526, 16928800),
-    ('Belgium', 337, 30510, 11007020),
-    ('United Kingdom', 256, 243610, 62262000),
-    ('Germany', 233, 357021, 81799600),
-    ('Liechtenstein', 205, 160, 32842),
-    ('Italy', 192, 301230, 59715625),
-    ('Switzerland', 177, 41290, 7301994),
-    ('Luxembourg', 173, 2586, 512000),
-    ('France', 111, 547030, 63601002),
-    ('Austria', 97, 83858, 8169929),
-    ('Greece', 81, 131940, 11606813),
-    ('Ireland', 65, 70280, 4581269),
-    ('Sweden', 20, 449964, 9515744),
-    ('Finland', 16, 338424, 5410233),
-    ('Norway', 13, 385252, 5033675),
-], dtype=population)
+Here is a table called ~population~.
+#+tblname: population_table
+| Netherlands    | 393 |  41526 | 16928800 |
+| Belgium        | 337 |  30510 | 11007020 |
+| United Kingdom | 256 | 243610 | 62262000 |
+| Germany        | 233 | 357021 | 81799600 |
+| Liechtenstein  | 205 |    160 |    32842 |
+| Italy          | 192 | 301230 | 59715625 |
+| Switzerland    | 177 |  41290 |  7301994 |
+| Luxembourg     | 173 |   2586 |   512000 |
+| France         | 111 | 547030 | 63601002 |
+| Austria        |  97 |  83858 |  8169929 |
+| Greece         |  81 | 131940 | 11606813 |
+| Ireland        |  65 |  70280 |  4581269 |
+| Sweden         |  20 | 449964 |  9515744 |
+| Finland        |  16 | 338424 |  5410233 |
+| Norway         |  13 | 385252 |  5033675 |
+
+#+begin_src python :session np :exports both :var population=population_table :results pp
+population = list((*l,) for l in population)
+pop_t = np.dtype([('country', 'U20'), ('density', '=i4'), ('area', '=i4'), ('population', '=i4')])
+np.array(population, dtype=pop_t)
 #+end_src
 
 #+RESULTS:
